--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "better-scroll": "^1.13.2",
+    "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.1.0",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
@@ -27,19 +30,19 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
@@ -58,7 +61,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.0.0",
+    "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
