--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
     "good-storage": "^1.1.0",
+    "js-base64": "^2.5.1",
     "jsonp": "^0.2.1",
     "lyric-parser": "^1.0.1",
     "vue": "^2.5.2",
@@ -61,7 +62,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.3.1",
+    "webpack-dev-server": "^2.9.7",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
